[ kappa ] POM cleanup